--- a/css/styles/global.sass
+++ b/css/styles/global.sass
@@ -19,6 +19,7 @@ body
     padding: 0
 
 .content-fade 
+    overflow-x: hidden !important
     animation-name: fade-in 
     animation-duration: 4s
     animation-fill-mode: forwards
