--- a/css/styles/queries.sass
+++ b/css/styles/queries.sass
@@ -66,3 +66,8 @@
         position: fixed !important
         bottom: 7vh !important
         right: 20px !important
+
+    .toast.show
+        left: 50%
+        transform: translateX(-50%) !important
+        width: 300px !important
